Correction for code overflow
hightlight.scss:
+ add overflow: scroll

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -105,12 +105,12 @@ a:link, a:visited, a:active, a:hover {
 }
 .highlighter-rouge {
     font-size: 0.9rem;
-    color: $simple_code;
-    background-color: $simple_codeBG;
-    padding: .1em .5em;
+    color: $simple_codeBG;
+    background-color: $simple_code;
+	padding: 0px 5px;
 	border-radius: 5px;
 	font-weight: 900;
-	word-spacing: 10px;
+	word-spacing: 9px;
 }
 
 
@@ -158,7 +158,7 @@ a:link, a:visited, a:active, a:hover {
 	text-align: center;
 
 	.return-btn {
-		color : rgb(230, 230, 230);
+		color : rgb(248, 248, 248);
 		p {
 			display: inline-block;
 			padding: 10px 30px;
