--- a/_sass/base/_highlight.scss
+++ b/_sass/base/_highlight.scss
@@ -1,5 +1,6 @@
 .highlight pre { 
-    padding: 10px; 
+    padding: 10px;
+    overflow: scroll; 
     margin : 10px 0;
     * {font-size:0.9rem;
     }
